# sejong

./: Cargo.toml  README.md
.github/scripts/: update_package_json.py
.github/workflows/: build-wasm.yml
examples/: buffer_typing.rs
src/: buffer.rs  byte.rs  lib.rs
src/syllable/: final_consonant.rs  initial_consonant.rs  medial_vowel.rs  mod.rs  syllable.rs
