[package]
name = "sejong"
version = "0.1.5"
authors = ["Xiwen Li<funfoolsuzi@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["hangul", "korean", "input"]
categories = ["text-processing", "parsing", "localization"]
description = "Sejong Buffer is a buffer that can receive ASCII bytes different from keyboard and send out UTF-32 Hangul string. This buffer allows deletion by Jamo."
repository = "https://github.com/funfoolsuzi/sejong.git"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen", "lazy_static", "wee_alloc"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true}
lazy_static = { version = "1.4", optional = true}
wee_alloc = { version = "0.4", optional = true}